Fix gradient not appearing when content doesn't fit in viewport

--- a/app/style.css
+++ b/app/style.css
@@ -13,7 +13,7 @@ svg {
 }
 
 html, body {
-    height: 100%; /* this is needed for gradient to extend to the bottom */
+    min-height: 100%; /* this is needed for gradient to extend to the bottom */
 }
 
 body {
